# DLTerm

./: .gitignore  CLAUDE.md  CMakeLists.txt
.github/workflows/: build.yml
docs/: architecture.md  build.md  commands.md  logging.md  screens.md  services.md  testing.md  tws-api.md  widgets.md
src/: body_screen.cc  body_screen.h  chart_screen.cc  chart_screen.h  contfut_smoketest.cc  debug_screen.cc  debug_screen.h  diagnostics.cc  diagnostics.h  function_bar.cc  function_bar.h  futures.cc  futures.h  futures_news_smoketest.cc  ibkr_client.cc  ibkr_client.h  layout.cc  layout.h  log.cc  log.h  main  main.cc  news_screen.cc  news_screen.h  portfolio_screen.cc  portfolio_screen.h  quote_screen.cc  quote_screen.h  redact.cc  redact.h  render_backend.h  screen.h  screen_factory.cc  screen_factory.h  sdl_render_backend.cc  sdl_render_backend.h  splash_screen.cc  splash_screen.h  text_grid.cc  text_grid.h  (+3 more)
src/services/: chart_service.cc  chart_service.h  contracts.h  info_service.cc  info_service.h  news_service.cc  news_service.h  portfolio_service.cc  portfolio_service.h  quote_service.cc  quote_service.h  service_context.h
tests/: CMakeLists.txt
tests/screen/: chart_screen_test.cc  debug_screen_test.cc  function_bar_render_test.cc  news_screen_test.cc  portfolio_screen_test.cc  quote_screen_test.cc  widgets_render_test.cc
tests/support/: fake_ibkr_client.h  spy_render_backend.cc  spy_render_backend.h
tests/unit/: command_parser_test.cc  diagnostics_test.cc  futures_test.cc  layout_test.cc  log_test.cc  redact_test.cc  sanity_test.cc  widgets_math_test.cc
tests/unit/services/: chart_service_test.cc  portfolio_service_test.cc  quote_service_test.cc
